@@ -1,19 +1,19 @@
 object FormWIADemo: TFormWIADemo
-  Left = 260
-  Height = 576
-  Top = 102
-  Width = 769
+  Left = 264
+  Height = 600
+  Top = 97
+  Width = 800
   Caption = 'WIA Demo'
-  ClientHeight = 576
-  ClientWidth = 769
+  ClientHeight = 600
+  ClientWidth = 800
   LCLVersion = '3.99.0.0'
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   object ImageHolder: TImage
     Left = 0
-    Height = 528
+    Height = 552
     Top = 48
-    Width = 769
+    Width = 800
     Align = alClient
     Proportional = True
     Stretch = True
@@ -22,10 +22,10 @@ object FormWIADemo: TFormWIADemo
     Left = 0
     Height = 48
     Top = 0
-    Width = 769
+    Width = 800
     Align = alTop
     ClientHeight = 48
-    ClientWidth = 769
+    ClientWidth = 800
     TabOrder = 0
     object btAcquire: TButton
       Left = 208
@@ -47,26 +47,26 @@ object FormWIADemo: TFormWIADemo
       OnClick = btSelectClick
     end
     object progressBar: TProgressBar
-      Left = 304
+      Left = 400
       Height = 24
       Top = 16
       Width = 300
       TabOrder = 2
     end
     object cbTest: TCheckBox
-      Left = 657
+      Left = 704
       Height = 19
-      Top = 8
+      Top = 0
       Width = 44
       Caption = 'Tests'
       Enabled = False
       TabOrder = 3
     end
     object edTests: TEdit
-      Left = 707
+      Left = 754
       Height = 23
-      Top = 8
-      Width = 56
+      Top = 0
+      Width = 37
       Enabled = False
       TabOrder = 4
     end
@@ -81,7 +81,7 @@ object FormWIADemo: TFormWIADemo
       TabOrder = 5
     end
     object lbProgress: TLabel
-      Left = 304
+      Left = 400
       Height = 1
       Top = 0
       Width = 1
@@ -101,6 +101,21 @@ object FormWIADemo: TFormWIADemo
       Enabled = False
       TabOrder = 6
       OnClick = btNativeClick
+    end
+    object edPages: TSpinEdit
+      Left = 312
+      Height = 23
+      Top = 17
+      Width = 50
+      MaxValue = 255
+      TabOrder = 7
+    end
+    object Label1: TLabel
+      Left = 311
+      Height = 15
+      Top = 0
+      Width = 37
+      Caption = 'Pages :'
     end
   end
 end
